Correctly aligning h1 titles of recipe pages

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@ h1{
 }
 
 h1.home{
-    display: inline-flex;
+    display: inline-block;
     margin-left: 50%;
+    text-align: center;
 }
 
 div{
